Chests in crystal temples